[metadata]
name = jade
version = attr: jade.__version__
author = JADE team
author_email = N.A.
description = JADE, a V&V tool for nuclear data libraries and transport codes
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

[options]
# package_dir =
#     = mcparser
packages =
    jade
    jade.resources

python_requires = >=3.9
install_requires =
    pandas
    numjuggler
    tqdm
    xlsxwriter
    openpyxl
    matplotlib
    scipy
    python-docx
    aspose-words
    f4enix

include_package_data = True

[options.packages.find]
where = jade

[options.entry_points]
console_scripts =
    jade=jade.main:main

[options.package_data]
# Include any *.txt files found in the resources package (but not in its
# subpackages):
* = *.txt

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov
    isort
